2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing semi-colon in Makefile.
	* git-version-gen.mk: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix quoting in Makefile.
	* git-version-gen.mk: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add doxygendocdir to pkg-config file.
	* pkg-config.pc.in: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Makefile rule.
	* git-version-gen.mk: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Factorize Makefile rules concerning git-version-gen.
	* git-version-gen.mk: New.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix stdout files smartly in autotest.at.
	* autotest.at: Use ROBOPTIMCORE_VERSION
	to know the current roboptim-core version.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Export modversion in pkg.m4.
	Warning: starting from this commit, pkg.m4 file does
	not match usual /usr/share/aclocal.pkg.m4 anymore.

	* pkg.m4: Add a variable indicating the version
	of detected modules.

2009-10-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Discuss enhancements of Doxygen rules.
	* doxygen.mk: Here.

2009-10-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle Doxygen dependencies properly.
	Warning: doxygen.mk is no more compatible with non-GNU make.
	Please add -Wno-portability in when calling autoreconf to remove
	warning and add a note specifying that GNU make is now required.

	* doxygen.mk: Use doxygen-deps to deduce Doxygen
	generated documentation dependencies.
	* doxygen/doxygen-deps.sh: New.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix path in documentation upload script.
	* sf-upload.sh.in: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Autoupdate.
	* config.guess,
	* config.sub: Update using autoreconf.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Enable all Autotools warnings.
	* bootstrap: Add flags to autoreconf to enable
	additional warnings.
