@@ -1,3 +1,10 @@
+2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Preprocess Doxyfile.extra, generate Doxygen log and be more strict.
+	* doxygen.mk: Preprocess Doxyfile.extra and generate a Doxygen log file.
+	* doxygen/Doxyfile.in: Make Doxygen more strict
+	regarding undocumented parameters in functions.
+
 2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add missing semi-colon in Makefile.
